<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginR"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginHint">

    <ProgressBar
        android:id="@+id/loginProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/login_asu_location"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/loginlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:foregroundGravity="center"
        android:padding="16dp"
        android:src="@mipmap/loginlogo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginRN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginlogo"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@color/colorLoginBg">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorLightGrey" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginRP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginRN"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorLoginBg">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorLightGrey" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/loginRP"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="32dp"
        android:allowUndo="false"
        android:background="@drawable/selector"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <Button
        android:id="@+id/loginRegister"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@+id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/colorPress"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/check_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/loginRegister"
        android:layout_toRightOf="@+id/loginRegister"
        android:text="@string/pass_login"
        android:textColor="@color/colorLightGrey" />
</RelativeLayout>
